# mgrs_origin_generator

./: CMakeLists.txt  README.md  main.cpp
